LFS158/Deploy-App/Deploy-Ingress/ingress-fanout-web.yaml
# Fanout Ingress definition
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
  name: fan-out-ingress
  namespace: k8stutorial
spec:
  ingressClassName: nginx 
  rules:
  - host: example.com
    http:
      paths:
      - path: /blue
        backend:
          service:
            name: blue-web-svc
            port:
              number: 80
        pathType: ImplementationSpecific
      - path: /green
        backend:
          service:
            name: green-web-svc
            port:
              number: 80
        pathType: ImplementationSpecific
